update reporte de emergencias

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:extractNativeLibs="true" android:icon="@mipmap/ic_launcher"
         android:label="Emergencia Bolivia Central"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
         <meta-data
