--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".BomberoDetailActivity" />
         <activity android:name=".AmbulanciasListActivity" />
         <activity android:name=".AmbulanciaDetailActivity" />
+        <activity android:name=".AnimalistasListActivity" />
+        <activity android:name=".AnimalistaDetailActivity" />
 
     </application>
 </manifest>
