--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".AmbulanciaDetailActivity" />
         <activity android:name=".AnimalistasListActivity" />
         <activity android:name=".AnimalistaDetailActivity" />
+        <activity android:name=".AmbientalistasListActivity" />
+        <activity android:name=".AmbientalistasDetailActivity" />
 
     </application>
 </manifest>
