update RElease fin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:extractNativeLibs="true" android:icon="@mipmap/ic_launcher"
         android:label="Emergencia Bolivia Central"
-        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBtLcvUaWZb02JBVg4VfIIMZqMo9ZRd6us" />
